--- a/animation/index.html
+++ b/animation/index.html
@@ -36,6 +36,6 @@
         
 
         
-        <script src="script.js"></script>
+        <script src="script.js" type="module"></script>
     </body>
 </html>
