feat: refactoring and change speed layer branch: main

--- a/animation/index.html
+++ b/animation/index.html
@@ -21,14 +21,17 @@
         </div>
 
         <div class="speed">
+            <span>
+                speed:
+            </span>
             <span class="showSpeed">
-                speed: 40
+                 25
             </span>
             <br />
             <input type="range" 
                     min="1" 
                     max="50"
-                    value="40"
+                    value="25"
                     class="range"
             ></input>
         </div>
