--- a/animation/index.html
+++ b/animation/index.html
@@ -14,10 +14,18 @@
         </canvas>
 
         <div class="navigation">
-            <div class="left">left</div>
-            <div class="right">right</div>
-            <div class="up">up</div>
-            <div class="down">down</div>
+            <button class="left">
+                left
+            </button>
+            <button class="right">
+                right
+            </button>
+            <button class="up">
+                up
+            </button>
+            <button class="down">
+                down
+            </button>
         </div>
 
         <div class="speed">
