feat: change dysaine branch: main

--- a/animation/index.html
+++ b/animation/index.html
@@ -14,35 +14,46 @@
         </canvas>
 
         <div class="navigation">
+            <div class="speed">
+                <span>
+                    speed:
+                </span>
+                <span class="showSpeed">
+                     25
+                </span>
+                <br />
+                <input type="range" 
+                        min="1" 
+                        max="50"
+                        value="25"
+                        class="range"
+                ></input>
+            </div>
+
+
             <button class="left">
                 left
             </button>
             <button class="right">
                 right
             </button>
-            <button class="up">
+         <!--  <button class="up">
                 up
             </button>
             <button class="down">
                 down
+            </button> -->
+            <button class="turbo">
+                turbo
+            </button>
+            <button class="jump">
+                jump
             </button>
         </div>
 
-        <div class="speed">
-            <span>
-                speed:
-            </span>
-            <span class="showSpeed">
-                 25
-            </span>
-            <br />
-            <input type="range" 
-                    min="1" 
-                    max="50"
-                    value="25"
-                    class="range"
-            ></input>
-        </div>
+        <h1 style="color: white">
+            Привет Мухаммаду от папы Рихарда)))
+        </h1>
 
         
 
