feat: add count monsters branchL main

--- a/animation/index.html
+++ b/animation/index.html
@@ -16,7 +16,7 @@
         <div class="navigation">
             <div class="speed">
                 <span>
-                    speed:
+                    скорость:
                 </span>
                 <span class="showSpeed">
                      25
@@ -30,12 +30,16 @@
                 ></input>
             </div>
 
+            <div class="timer">
+                таймер: <span>60</span>
+            </div>
+
 
             <button class="left">
-                left
+                влево
             </button>
             <button class="right">
-                right
+                вправо
             </button>
          <!--  <button class="up">
                 up
@@ -44,11 +48,15 @@
                 down
             </button> -->
             <button class="turbo">
-                turbo
+                турбо
             </button>
             <button class="jump">
-                jump
+                прыжок
             </button>
+
+            <div class="monster__count">
+                количество монстров которых коснулся: <span>0</span>
+            </div>
         </div>
 
         <h1 style="color: white">
