feat: start game and proccess branch: main

--- a/animation/index.html
+++ b/animation/index.html
@@ -10,6 +10,11 @@
     </head>
     <body> 
 
+        <h1 class="help__text">
+            Начало игры, приготовьтесь
+        </h1>
+
+
         <canvas id="canvas">
         </canvas>
 
@@ -58,10 +63,6 @@
                 количество монстров которых коснулся: <span>0</span>
             </div>
         </div>
-
-        <h1 style="color: white">
-            Привет Мухаммаду от папы Рихарда)))
-        </h1>
 
         
 
