feat: add start game btn branch: main

--- a/animation/index.html
+++ b/animation/index.html
@@ -10,9 +10,15 @@
     </head>
     <body> 
 
-        <h1 class="help__text">
-            Начало игры, приготовьтесь
-        </h1>
+        <div class="help__text">
+            <h1>
+                Начало игры, приготовьтесь
+            </h1>
+
+            <button class="start__game">
+                старт игры
+            </button>
+        </div>
 
 
         <canvas id="canvas">
