feature(hooks): add animation line

--- a/lists-canvas/index.html
+++ b/lists-canvas/index.html
@@ -9,12 +9,12 @@
 <body>
     
     <canvas id="canvas-1"></canvas>
-    <canvas id="canvas-2"></canvas>
+    <!-- <canvas id="canvas-2"></canvas>
     <canvas id="canvas-3"></canvas>
     <canvas id="canvas-4"></canvas>
     <canvas id="canvas-5"></canvas>
-    <canvas id="canvas-6"></canvas>
+    <canvas id="canvas-6"></canvas> -->
 
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
