feat(hooks): add loader

--- a/lists-canvas/index.html
+++ b/lists-canvas/index.html
@@ -14,7 +14,13 @@
     <canvas id="canvas-4"></canvas>
     <canvas id="canvas-5"></canvas>
     <canvas id="canvas-6"></canvas> -->
-
+    <button id="start">
+        start
+    </button>  
+    <br>
+    <button id="reset">
+        reset
+    </button>  
     <script type="module" src="./script.js"></script>
 </body>
 </html>
